[package]
name = "portcall"
version = "0.2.3"
edition = "2024"
authors = ["Chirayu Rankawat <chirayurankawat@gmail.com>"]
description = "A terminal serial monitor that discovers ports, lets you pick from a list, and auto-detects baud."
repository = "https://github.com/ChirayuR/Portcall"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["serial", "uart", "tty", "terminal", "monitor"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
serialport = "4.9.0"
tuie = { version = "0.2.4", features = ["harmonious"] }
